# 3crystals

./: 3crystals.manifest  CMakeLists.txt  LICENSE.txt  README.txt  README_Android.txt  versioninfo.rc  windows_icons.rc
android-studio/: gradle.properties
android-studio/app/: build.gradle
android-studio/app/src/main/: AndroidManifest.xml
android-studio/app/src/main/java/com/b1stable/threecrystals/: License_Viewer_Activity.java  ThreeCrystals_Activity.java
android-studio/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
android-studio/ndk-build-project/: build.xml  project.properties
android-studio/ndk-build-project/jni/SDL2/: Android.mk
android-studio/ndk-build-project/jni/src/: Android.mk
data/audio/mml/music/: game_prerendered.mml  gameover_prerendered.mml  pause_prerendered.mml  title_prerendered.mml
data/audio/mml/sfx/: bigshot.mml  button.mml  shot.mml  widget.mml
data/audio/samples/: explosion_small.flac  game_prerendered.flac  gameover_prerendered.flac  pause_prerendered.flac  powerup.flac  title_prerendered.flac
data/gfx/images/misc/: icon16.tga  icon24.tga  icon256.tga
data/gfx/palettes/: palette.gpl
data/text/: English.utf8
docs/: 3rd_party.html  enemies.txt
include/: game.h  general.h  gui.h  main.h  widgets.h
misc/batch_files/cmake/windows/: 3crystals.bat  shim4.bat  tgui6.bat
origdata/logos/: 3c_logo.pdn
origdata/music/: 3 champagnes.flp  bingoest.flp  hands up.flp  straight jacket.flp
origdata/sfx/: explosion_small.jfxr  powerup.jfxr
src/: general.cpp  gui.cpp  main.cpp  widgets.cpp
